# OpenLicenseService

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
deploy/: innoscript-ols.iss  olsservice.service  setupService.sh
src/: CMakeLists.txt  filemanager.cpp  filemanager.h  licenseservice.cpp  licenseservice.h  licensevalidator.cpp  licensevalidator.h  main.cpp  registerdevice.cpp  registerdevice.h  reporter.cpp  reporter.h  servicecreator.cpp  servicecreator.h  timemanager.cpp  timemanager.h
src/HWIdentifiers/: CMakeLists.txt  diskinfo.cpp  diskinfo.h  hwidentifiers.cpp  hwidentifiers.h  memoryinfo.cpp  memoryinfo.h  motherboardinfo.cpp  motherboardinfo.h  operatingsystem.cpp  operatingsystem.h  processorinfo.cpp  processorinfo.h
